CREATE TYPE "OrderStatus" AS ENUM (
  'PENDING_CONFIRMATION',
  'PENDING_PICKUP',
  'PENDING_DELIVERY',
  'DELIVERED',
  'RETURNED',
  'CANCELLED'
);

CREATE TYPE "VerificationCode" AS ENUM (
  'REGISTER',
  'FORGOT_PASSWORD'
);

CREATE TYPE "UserStatus" AS ENUM (
  'ACTIVE',
  'BLOCKED'
);

CREATE TYPE "HTTPMethod" AS ENUM (
  'GET',
  'POST',
  'PUT',
  'DELETE',
  'PATCH',
  'OPTIONS',
  'HEAD'
);

CREATE TABLE "Language" (
                            "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
                            "name" "String",
                            "code" "String" UNIQUE,
                            "createdById" Int,
                            "updatedById" Int,
                            "deletedAt" "DateTime",
                            "createdAt" "DateTime" DEFAULT (now()),
                            "updatedAt" "DateTime"
);

CREATE TABLE "User" (
                        "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
                        "email" "String" UNIQUE,
                        "name" "String",
                        "password" "String",
                        "phoneNumber" "String",
                        "avatar" "String",
                        "totpSecret" "String",
                        "status" "UserStatus" DEFAULT 'ACTIVE',
                        "roleId" Int,
                        "createdById" Int,
                        "updatedById" Int,
                        "deletedAt" "DateTime",
                        "createdAt" "DateTime" DEFAULT (now()),
                        "updatedAt" "DateTime"
);

CREATE TABLE "UserTranslation" (
                                   "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
                                   "userId" Int,
                                   "languageId" Int,
                                   "address" "String",
                                   "description" "String",
                                   "createdById" Int,
                                   "updatedById" Int,
                                   "deletedAt" "DateTime",
                                   "createdAt" "DateTime" DEFAULT (now()),
                                   "updatedAt" "DateTime"
);

CREATE TABLE "VerificationCode" (
                                    "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
                                    "email" "String",
                                    "code" "String",
                                    "type" "VerificationCodeType",
                                    "expiresAt" "DateTime",
                                    "createdAt" "DateTime" DEFAULT (now())
);

CREATE TABLE "RefreshToken" (
                                "token" "String" UNIQUE,
                                "userId" Int,
                                "expiresAt" "DateTime",
                                "createdAt" "DateTime" DEFAULT (now())
);

CREATE TABLE "Permission" (
                              "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
                              "name" "String",
                              "description" "String",
                              "path" "String",
                              "method" "HTTPMethod",
                              "createdById" Int,
                              "updatedById" Int,
                              "deletedAt" "DateTime",
                              "createdAt" "DateTime" DEFAULT (now()),
                              "updatedAt" "DateTime"
);

CREATE TABLE "Role" (
                        "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
                        "name" "String" UNIQUE,
                        "description" "String",
                        "isActive" Boolean DEFAULT true,
                        "createdById" Int,
                        "updatedById" Int,
                        "deletedAt" "DateTime",
                        "createdAt" "DateTime" DEFAULT (now()),
                        "updatedAt" "DateTime"
);

CREATE TABLE "Product" (
                           "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
                           "base_price" Float,
                           "virtual_price" Float,
                           "brandId" Int,
                           "images" "String[]",
                           "createdById" Int,
                           "updatedById" Int,
                           "deletedAt" "DateTime",
                           "createdAt" "DateTime" DEFAULT (now()),
                           "updatedAt" "DateTime"
);

CREATE TABLE "ProductTranslation" (
                                      "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
                                      "productId" Int,
                                      "languageId" Int,
                                      "name" "String",
                                      "description" "String",
                                      "createdById" Int,
                                      "updatedById" Int,
                                      "deletedAt" "DateTime",
                                      "createdAt" "DateTime" DEFAULT (now()),
                                      "updatedAt" "DateTime"
);

CREATE TABLE "Category" (
                            "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
                            "parentCategoryId" Int,
                            "createdById" Int,
                            "updatedById" Int,
                            "deletedAt" "DateTime",
                            "createdAt" "DateTime" DEFAULT (now()),
                            "updatedAt" "DateTime"
);

CREATE TABLE "CategoryTranslation" (
                                       "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
                                       "categoryId" Int,
                                       "languageId" Int,
                                       "name" "String",
                                       "description" "String",
                                       "createdById" Int,
                                       "updatedById" Int,
                                       "deletedAt" "DateTime",
                                       "createdAt" "DateTime" DEFAULT (now()),
                                       "updatedAt" "DateTime"
);

CREATE TABLE "Variant" (
                           "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
                           "name" "String",
                           "productId" Int,
                           "createdById" Int,
                           "updatedById" Int,
                           "deletedAt" "DateTime",
                           "createdAt" "DateTime" DEFAULT (now()),
                           "updatedAt" "DateTime"
);

CREATE TABLE "VariantOption" (
                                 "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
                                 "value" "String",
                                 "variantId" Int,
                                 "createdById" Int,
                                 "updatedById" Int,
                                 "deletedAt" "DateTime",
                                 "createdAt" "DateTime" DEFAULT (now()),
                                 "updatedAt" "DateTime"
);

CREATE TABLE "SKU" (
                       "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
                       "value" "String",
                       "price" Float,
                       "stock" Int,
                       "images" "String[]",
                       "productId" Int,
                       "createdById" Int,
                       "updatedById" Int,
                       "deletedAt" "DateTime",
                       "createdAt" "DateTime" DEFAULT (now()),
                       "updatedAt" "DateTime"
);

CREATE TABLE "Brand" (
                         "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
                         "logo" "String",
                         "createdById" Int,
                         "updatedById" Int,
                         "deletedAt" "DateTime",
                         "createdAt" "DateTime" DEFAULT (now()),
                         "updatedAt" "DateTime"
);

CREATE TABLE "BrandTranslation" (
                                    "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
                                    "brandId" Int,
                                    "languageId" Int,
                                    "name" "String",
                                    "description" "String",
                                    "createdById" Int,
                                    "updatedById" Int,
                                    "deletedAt" "DateTime",
                                    "createdAt" "DateTime" DEFAULT (now()),
                                    "updatedAt" "DateTime"
);

CREATE TABLE "CartItem" (
                            "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
                            "quantity" Int,
                            "skuId" Int,
                            "userId" Int,
                            "createdAt" "DateTime" DEFAULT (now()),
                            "updatedAt" "DateTime"
);

CREATE TABLE "ProductSKUSnapshot" (
                                      "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
                                      "productName" "String",
                                      "price" Float,
                                      "images" "String[]",
                                      "skuValue" "String",
                                      "skuId" Int,
                                      "orderId" Int,
                                      "createdAt" "DateTime" DEFAULT (now())
);

CREATE TABLE "Order" (
                         "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
                         "userId" Int,
                         "status" "OrderStatus",
                         "createdById" Int,
                         "updatedById" Int,
                         "deletedAt" "DateTime",
                         "createdAt" "DateTime" DEFAULT (now()),
                         "updatedAt" "DateTime"
);

CREATE TABLE "Review" (
                          "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
                          "content" "String",
                          "rating" Int,
                          "productId" Int,
                          "userId" Int,
                          "deletedAt" "DateTime",
                          "createdAt" "DateTime" DEFAULT (now()),
                          "updatedAt" "DateTime"
);

CREATE TABLE "PaymentTransaction" (
                                      "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
                                      "gateway" "String",
                                      "transactionDate" "DateTime" DEFAULT (now()),
                                      "accountNumber" "String",
                                      "subAccount" "String",
                                      "amountIn" Int DEFAULT 0,
                                      "amountOut" Int DEFAULT 0,
                                      "accumulated" Int DEFAULT 0,
                                      "code" "String",
                                      "transactionContent" "String",
                                      "referenceNumber" "String",
                                      "body" "String",
                                      "createdAt" "DateTime" DEFAULT (now())
);

CREATE TABLE "Message" (
                           "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
                           "fromUserId" Int,
                           "toUserId" Int,
                           "content" "String",
                           "readAt" "DateTime",
                           "createdAt" "DateTime" DEFAULT (now())
);

CREATE TABLE "Device" (
                          "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
                          "userId" int NOT NULL,
                          "userAgent" varchar(1000) NOT NULL,
                          "ip" varchar(50) NOT NULL,
                          "lastActive" timestamp,
                          "createdAt" timestamp DEFAULT (now()),
                          "isActive" boolean DEFAULT true
);

CREATE TABLE "ProductsCategories" (
                                      "product_id" Int,
                                      "category_id" Int
);

CREATE TABLE "PermissionsRoles" (
                                    "permission_id" Int,
                                    "role_id" Int
);

CREATE TABLE "SkusVariantOptions" (
                                      "sku_id" Int,
                                      "variant_option_id" Int
);

CREATE INDEX ON "VerificationCode" ("email", "code", "type");

CREATE INDEX ON "VerificationCode" ("expiresAt");

CREATE INDEX ON "RefreshToken" ("expiresAt");

ALTER TABLE "Language" ADD FOREIGN KEY ("createdById") REFERENCES "User" ("id");

ALTER TABLE "Language" ADD FOREIGN KEY ("updatedById") REFERENCES "User" ("id");

ALTER TABLE "User" ADD FOREIGN KEY ("roleId") REFERENCES "Role" ("id");

ALTER TABLE "User" ADD FOREIGN KEY ("createdById") REFERENCES "User" ("id");

ALTER TABLE "User" ADD FOREIGN KEY ("updatedById") REFERENCES "User" ("id");

ALTER TABLE "UserTranslation" ADD FOREIGN KEY ("userId") REFERENCES "User" ("id");

ALTER TABLE "UserTranslation" ADD FOREIGN KEY ("languageId") REFERENCES "Language" ("id");

ALTER TABLE "UserTranslation" ADD FOREIGN KEY ("createdById") REFERENCES "User" ("id");

ALTER TABLE "UserTranslation" ADD FOREIGN KEY ("updatedById") REFERENCES "User" ("id");

ALTER TABLE "RefreshToken" ADD FOREIGN KEY ("userId") REFERENCES "User" ("id");

ALTER TABLE "Permission" ADD FOREIGN KEY ("createdById") REFERENCES "User" ("id");

ALTER TABLE "Permission" ADD FOREIGN KEY ("updatedById") REFERENCES "User" ("id");

ALTER TABLE "Role" ADD FOREIGN KEY ("createdById") REFERENCES "User" ("id");

ALTER TABLE "Role" ADD FOREIGN KEY ("updatedById") REFERENCES "User" ("id");

ALTER TABLE "Product" ADD FOREIGN KEY ("brandId") REFERENCES "Brand" ("id");

ALTER TABLE "Product" ADD FOREIGN KEY ("createdById") REFERENCES "User" ("id");

ALTER TABLE "Product" ADD FOREIGN KEY ("updatedById") REFERENCES "User" ("id");

ALTER TABLE "ProductTranslation" ADD FOREIGN KEY ("productId") REFERENCES "Product" ("id");

ALTER TABLE "ProductTranslation" ADD FOREIGN KEY ("languageId") REFERENCES "Language" ("id");

ALTER TABLE "ProductTranslation" ADD FOREIGN KEY ("createdById") REFERENCES "User" ("id");

ALTER TABLE "ProductTranslation" ADD FOREIGN KEY ("updatedById") REFERENCES "User" ("id");

ALTER TABLE "Category" ADD FOREIGN KEY ("parentCategoryId") REFERENCES "Category" ("id");

ALTER TABLE "Category" ADD FOREIGN KEY ("createdById") REFERENCES "User" ("id");

ALTER TABLE "Category" ADD FOREIGN KEY ("updatedById") REFERENCES "User" ("id");

ALTER TABLE "CategoryTranslation" ADD FOREIGN KEY ("categoryId") REFERENCES "Category" ("id");

ALTER TABLE "CategoryTranslation" ADD FOREIGN KEY ("languageId") REFERENCES "Language" ("id");

ALTER TABLE "CategoryTranslation" ADD FOREIGN KEY ("createdById") REFERENCES "User" ("id");

ALTER TABLE "CategoryTranslation" ADD FOREIGN KEY ("updatedById") REFERENCES "User" ("id");

ALTER TABLE "Variant" ADD FOREIGN KEY ("productId") REFERENCES "Product" ("id");

ALTER TABLE "Variant" ADD FOREIGN KEY ("createdById") REFERENCES "User" ("id");

ALTER TABLE "Variant" ADD FOREIGN KEY ("updatedById") REFERENCES "User" ("id");

ALTER TABLE "VariantOption" ADD FOREIGN KEY ("variantId") REFERENCES "Variant" ("id");

ALTER TABLE "VariantOption" ADD FOREIGN KEY ("createdById") REFERENCES "User" ("id");

ALTER TABLE "VariantOption" ADD FOREIGN KEY ("updatedById") REFERENCES "User" ("id");

ALTER TABLE "SKU" ADD FOREIGN KEY ("productId") REFERENCES "Product" ("id");

ALTER TABLE "SKU" ADD FOREIGN KEY ("createdById") REFERENCES "User" ("id");

ALTER TABLE "SKU" ADD FOREIGN KEY ("updatedById") REFERENCES "User" ("id");

ALTER TABLE "Brand" ADD FOREIGN KEY ("createdById") REFERENCES "User" ("id");

ALTER TABLE "Brand" ADD FOREIGN KEY ("updatedById") REFERENCES "User" ("id");

ALTER TABLE "BrandTranslation" ADD FOREIGN KEY ("brandId") REFERENCES "Brand" ("id");

ALTER TABLE "BrandTranslation" ADD FOREIGN KEY ("languageId") REFERENCES "Language" ("id");

ALTER TABLE "BrandTranslation" ADD FOREIGN KEY ("createdById") REFERENCES "User" ("id");

ALTER TABLE "BrandTranslation" ADD FOREIGN KEY ("updatedById") REFERENCES "User" ("id");

ALTER TABLE "CartItem" ADD FOREIGN KEY ("skuId") REFERENCES "SKU" ("id");

ALTER TABLE "CartItem" ADD FOREIGN KEY ("userId") REFERENCES "User" ("id");

ALTER TABLE "ProductSKUSnapshot" ADD FOREIGN KEY ("skuId") REFERENCES "SKU" ("id");

ALTER TABLE "ProductSKUSnapshot" ADD FOREIGN KEY ("orderId") REFERENCES "Order" ("id");

ALTER TABLE "Order" ADD FOREIGN KEY ("userId") REFERENCES "User" ("id");

ALTER TABLE "Order" ADD FOREIGN KEY ("createdById") REFERENCES "User" ("id");

ALTER TABLE "Order" ADD FOREIGN KEY ("updatedById") REFERENCES "User" ("id");

ALTER TABLE "Review" ADD FOREIGN KEY ("productId") REFERENCES "Product" ("id");

ALTER TABLE "Review" ADD FOREIGN KEY ("userId") REFERENCES "User" ("id");

ALTER TABLE "Message" ADD FOREIGN KEY ("fromUserId") REFERENCES "User" ("id");

ALTER TABLE "Message" ADD FOREIGN KEY ("toUserId") REFERENCES "User" ("id");

ALTER TABLE "Device" ADD FOREIGN KEY ("userId") REFERENCES "User" ("id");

ALTER TABLE "ProductsCategories" ADD FOREIGN KEY ("product_id") REFERENCES "Product" ("id");

ALTER TABLE "ProductsCategories" ADD FOREIGN KEY ("category_id") REFERENCES "Category" ("id");

ALTER TABLE "PermissionsRoles" ADD FOREIGN KEY ("permission_id") REFERENCES "Permission" ("id");

ALTER TABLE "PermissionsRoles" ADD FOREIGN KEY ("role_id") REFERENCES "Role" ("id");

ALTER TABLE "SkusVariantOptions" ADD FOREIGN KEY ("sku_id") REFERENCES "SKU" ("id");

ALTER TABLE "SkusVariantOptions" ADD FOREIGN KEY ("variant_option_id") REFERENCES "VariantOption" ("id");